--- a/books-api/deployment.yaml
+++ b/books-api/deployment.yaml
@@ -19,7 +19,7 @@ spec:
             - containerPort: 3000
           env:
             - name: DB_HOST
-              value: test-db #TODO DB_HOST
+              value: 10.96.43.169
             - name: DB_NAME
               value: test-db
             - name: DB_USER
