--- a/database/pvc.yaml
+++ b/database/pvc.yaml
@@ -3,6 +3,7 @@ kind: PersistentVolumeClaim
 metadata:
   name: mysql-pvc
 spec:
+  storageClassName: manual
   volumeName: mysql-pv
   accessModes:
     - ReadWriteOnce
