add arg to read vault

--- a/database/deployment.yaml
+++ b/database/deployment.yaml
@@ -24,6 +24,8 @@ spec:
       containers:
         - name: mysql-container
           image: mysql
+          args:
+            ["sh", "-c", "source /vault/secrets/config && <entrypoint script>"]
           env:
             - name: MYSQL_DATABASE
               value: test-db
