--- a/books-api/deployment.yaml
+++ b/books-api/deployment.yaml
@@ -24,6 +24,8 @@ spec:
       containers:
         - name: books-api
           image: mmmarzouki/example-app:latest
+          args:
+            ["sh", "-c", "source /vault/secrets/config && <entrypoint script>"]
           ports:
             - containerPort: 3000
           env:
