--- a/books-api/deployment.yaml
+++ b/books-api/deployment.yaml
@@ -15,7 +15,7 @@ spec:
         vault.hashicorp.com/agent-inject-secret-database-config.txt: "internal/data/database/config"
         vault.hashicorp.com/agent-inject-template-database-config.txt: |
           {{- with secret "internal/data/database/config" -}}
-            export DB_PASSWORD="{{ .Data.data.password }}" DB_USERNAME="{{ .Data.data.username }}"
+            export DB_PASSWORD="{{ .Data.data.password }}" DB_USER="{{ .Data.data.username }}"
           {{- end -}}
       labels:
         app: books-api
