--- a/books-api/deployment.yaml
+++ b/books-api/deployment.yaml
@@ -24,11 +24,11 @@ spec:
       containers:
         - name: books-api
           image: mmmarzouki/example-app:latest
+          command: : ["/bin/sh"]
           args:
             [
-              "sh",
               "-c",
-              "source /vault/secrets/database-config.txt && <entrypoint script>",
+              "source /vault/secrets/database-config.txt",
             ]
           ports:
             - containerPort: 3000
