--- a/books-api/deployment.yaml
+++ b/books-api/deployment.yaml
@@ -24,12 +24,8 @@ spec:
       containers:
         - name: books-api
           image: mmmarzouki/example-app:latest
-          command: : ["/bin/sh"]
-          args:
-            [
-              "-c",
-              "source /vault/secrets/database-config.txt",
-            ]
+          command: ["/bin/sh"]
+          args: ["-c", "source /vault/secrets/database-config.txt"]
           ports:
             - containerPort: 3000
           env:
