--- a/books-api/deployment.yaml
+++ b/books-api/deployment.yaml
@@ -24,8 +24,12 @@ spec:
       containers:
         - name: books-api
           image: mmmarzouki/example-app:latest
-          command: ["/bin/sh"]
-          args: ["-c", "source /vault/secrets/database-config.txt"]
+          args:
+            [
+              "sh",
+              "-c",
+              "source /vault/secrets/database-config.txt && <entrypoint script>",
+            ]
           ports:
             - containerPort: 3000
           env:
