--- a/database/deployment.yaml
+++ b/database/deployment.yaml
@@ -15,7 +15,7 @@ spec:
         vault.hashicorp.com/agent-inject-secret-database-config.txt: "internal/data/database/config"
         vault.hashicorp.com/agent-inject-template-database-config.txt: |
           {{- with secret "internal/data/database/config" -}}
-            "{{ .Data.data.password }}"
+            {{ .Data.data.password }}
           {{- end -}}
       labels:
         app: mysql-app
