revert injection of password directely

--- a/database/deployment.yaml
+++ b/database/deployment.yaml
@@ -15,7 +15,7 @@ spec:
         vault.hashicorp.com/agent-inject-secret-database-config.txt: "internal/data/database/config"
         vault.hashicorp.com/agent-inject-template-database-config.txt: |
           {{- with secret "internal/data/database/config" -}}
-            export MYSQL_ROOT_PASSWORD={{ .Data.data.password }}
+            {{ .Data.data.password }}
           {{- end -}}
       labels:
         app: mysql-app
@@ -24,15 +24,11 @@ spec:
       containers:
         - name: mysql-container
           image: mysql
-          args:
-            [
-              "sh",
-              "-c",
-              "source /vault/secrets/database-config.txt && <entrypoint script>",
-            ]
           env:
             - name: MYSQL_DATABASE
               value: test-db
+            - name: MYSQL_ROOT_PASSWORD
+              value: "/vault/secrets/database-config.txt"
           ports:
             - containerPort: 3306
           volumeMounts:
