--- a/books-api/deployment.yaml
+++ b/books-api/deployment.yaml
@@ -15,6 +15,7 @@ spec:
         vault.hashicorp.com/agent-inject-secret-database-config.txt: "internal/data/database/config"
         vault.hashicorp.com/agent-inject-template-database-config.txt: |
           {{- with secret "internal/data/database/config" -}}
+            #!/bin/bash
             export DB_PASSWORD={{ .Data.data.password }} DB_USER={{ .Data.data.username }}
           {{- end -}}
       labels:
@@ -24,12 +25,7 @@ spec:
       containers:
         - name: books-api
           image: mmmarzouki/example-app:latest
-          args:
-            [
-              "sh",
-              "-c",
-              "source /vault/secrets/database-config.txt && <entrypoint script>",
-            ]
+          args: ["sh", "-c", "source /vault/secrets/database-config.txt && env"]
           ports:
             - containerPort: 3000
           env:
