--- a/books-api/deployment.yaml
+++ b/books-api/deployment.yaml
@@ -12,10 +12,9 @@ spec:
       annotations:
         vault.hashicorp.com/agent-inject: "true"
         vault.hashicorp.com/role: "internal-app"
-        vault.hashicorp.com/agent-inject-secret-database-config.txt: "internal/data/database/config"
-        vault.hashicorp.com/agent-inject-template-database-config.txt: |
+        vault.hashicorp.com/agent-inject-secret-database-config: "internal/data/database/config"
+        vault.hashicorp.com/agent-inject-template-database-config: |
           {{- with secret "internal/data/database/config" -}}
-            #!/bin/bash
             export DB_PASSWORD={{ .Data.data.password }} DB_USER={{ .Data.data.username }}
           {{- end -}}
       labels:
@@ -28,7 +27,7 @@ spec:
           command: ["/bin/sh", “-c”]
           args:
             [
-              "/vault/secrets/database-config.txt && env >> /home/node/secret.txt && sleep 600",
+              "source /vault/secrets/database-config && env >> /home/node/vars && sleep 10",
             ]
           ports:
             - containerPort: 3000
