--- a/books-api/deployment.yaml
+++ b/books-api/deployment.yaml
@@ -24,7 +24,7 @@ spec:
       containers:
         - name: books-api
           image: mmmarzouki/example-app:latest
-          command: ["/bin/sh", “-c”]
+          command: ["/bin/sh", "-c"]
           args:
             [
               "source /vault/secrets/database-config && env >> /home/node/vars && node index.js",
