--- a/database/deployment.yaml
+++ b/database/deployment.yaml
@@ -12,10 +12,10 @@ spec:
       annotations:
         vault.hashicorp.com/agent-inject: "true"
         vault.hashicorp.com/role: "internal-app"
-        vault.hashicorp.com/agent-inject-secret-database-config.txt: "internal/data/database/config"
-        vault.hashicorp.com/agent-inject-template-database-config.txt: |
+        vault.hashicorp.com/agent-inject-secret-database-config: "internal/data/database/config"
+        vault.hashicorp.com/agent-inject-template-database-config: |
           {{- with secret "internal/data/database/config" -}}
-            {{ .Data.data.password }}
+             export MYSQL_ROOT_PASSWORD={{ .Data.data.password }}
           {{- end -}}
       labels:
         app: mysql-app
@@ -24,11 +24,12 @@ spec:
       containers:
         - name: mysql-container
           image: mysql
+          command: ["/bin/sh", "-c"]
+          args:
+            ["source /vault/secrets/database-config && docker-entrypoint.sh"]
           env:
             - name: MYSQL_DATABASE
               value: test-db
-            - name: MYSQL_ROOT_PASSWORD_FILE
-              value: "/vault/secrets/database-config.txt"
           ports:
             - containerPort: 3306
           volumeMounts:
