--- a/database/deployment.yaml
+++ b/database/deployment.yaml
@@ -25,8 +25,7 @@ spec:
         - name: mysql-container
           image: mysql
           command: ["/bin/sh", "-c"]
-          args:
-            ["source /vault/secrets/database-config && docker-entrypoint.sh"]
+          args: ["source /vault/secrets/database-config && ./entrypoint.sh"]
           env:
             - name: MYSQL_DATABASE
               value: test-db
