--- a/books-api/ingress.yaml
+++ b/books-api/ingress.yaml
@@ -5,14 +5,11 @@ metadata:
   annotations:
     nginx.ingress.kubernetes.io/rewrite-target: /
 spec:
-  ingressClassName: nginx-example
   rules:
     - http:
         paths:
           - path: /
             pathType: Prefix
             backend:
-              service:
-                name: books-api
-                port:
-                  number: 3000
+              serviceName: books-api
+              servicePort: 3000
