--- a/books-api/ingress.yaml
+++ b/books-api/ingress.yaml
@@ -3,6 +3,7 @@ kind: Ingress
 metadata:
   name: books-api-ingress
   annotations:
+    nginx.ingress.kubernetes.io/rewrite-target: /
     kubernetes.io/ingress.class: traefik
 spec:
   rules:
